--- a/environments/development.properties
+++ b/environments/development.properties
@@ -2,7 +2,7 @@
 time_zone=GMT+0:00
 
 ## The character set that scripts are encoded with
-# script_char_set=UTF-8
+script_char_set=UTF-8
 
 ## JDBC connection properties.
 driver=com.mysql.cj.jdbc.Driver
